--- a/etc/docfx/filter.yml
+++ b/etc/docfx/filter.yml
@@ -1,12 +1,4 @@
 attributeRules:
 - exclude:
-  uidRegex: ^Epic\.OnlineServices.*
-  type: Namespace
-- exclude:
-  uidRegex: ^Epic\.OnlineServices.*
-  type: Type
-
-- include:
-  uidRegex: ^PlayEveryWare\.EpicOnlineServices.*
-  type: Namespace
+  uidRegex: ^Epic\.*
   
